@@ -2,6 +2,7 @@ Revision history for Config::Abstraction - Merge and manage configuration data f
 
 0.36
 	Ignore files that don't parse
+	Added the exists() method
 
 0.35	Mon Oct 13 18:38:37 EDT 2025
 	Bump some minimum versions - GitHub#6
